<resources>
    <string name="app_name">EVMS Mobile</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">EVMS Mobile</string>
    <string name="nav_header_subtitle">evms@mobile.com</string>
    <string name="nav_header_desc">Employee Vaccination Management System</string>
    <string name="action_signout">Sign out</string>

    <string name="menu_home">Home</string>
    <string name="menu_vaccine_types">Vaccine Types</string>
    <string name="action_delete">Delete</string>

    <string name="delete_confirmation">Delete this vaccine type?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="prompt_note_name">Name</string>
    <string name="action_add">Add</string>
    <string name="prompt_note_description">Description</string>
    <string name="update">Update</string>

    <string name="invalid_vaccine_type_name">Vaccine Type name cannot be empty.</string>
    <string name="invalid_vaccine_type_description">Vaccine Type description cannot be empty.</string>
</resources>