<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_login">

    <fragment
        android:id="@+id/nav_login"
        android:name="sqltutorial.evmsmobile.ui.login.LoginFragment"
        android:label="@string/action_sign_in"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_nav_login_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_home"
        android:name="sqltutorial.evmsmobile.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_vaccine_types"
        android:name="sqltutorial.evmsmobile.ui.vaccine_types.VaccineTypesFragment"
        android:label="@string/menu_vaccine_types"
        tools:layout="@layout/fragment_vaccine_types" />
</navigation>